Update Sentiment analysis using Flair.ipynb

--- a/Sentiment analysis using Flair.ipynb
+++ b/Sentiment analysis using Flair.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# Open text file and read contents\n",
-    "with open('unh.txt', 'r', encoding='utf-8') as f:\n",
+    "with open('file_name.txt', 'r', encoding='utf-8') as f:\n",
     "    text = f.read().replace('\\n', '')\n",
     "\n"
    ]
